------------------------------------------------------
Release 0 | Beta 1 | Development 1 | Experimental 0

* Added Face
* Added Material
* Added MaterialLoader
* Added Model
* Added ModelParserUtils
* Added OBJLoader
* Added methods in Renderer to update certain data
* Added the method unbind() in Image

* Created the package org.andor.core.model

* Renamed Quad3DTest to Cube3DTest

* Fixed bug: VSync wasn't being used

* Hopefully decreased loading time and memory usage,
  ImageSet.loadImage() doesn't return an Image with
  anything inside, it only contains the texture
  coordinates and the size of the texture.

------------------------------------------------------
Release 0 | Beta 1 | Development 0 | Experimental 3

* Added Face
* Added Material
* Added MaterialLoader
* Added Model
* Added ModelParserUtils
* Added OBJLoader

* Created the package org.andor.core.model

------------------------------------------------------
Release 0 | Beta 1 | Development 0 | Experimental 2

* Added the method unbind() in Image

* Fixed bug: VSync wasn't being used

* Hopefully decreased loading time and memory usage,
  ImageSet.loadImage() doesn't return an Image with
  anything inside, it only contains the texture
  coordinates and the size of the texture.

------------------------------------------------------
Release 0 | Beta 1 | Development 0 | Experimental 1

* Added methods in Renderer to update certain data

* Renamed Quad3DTest to Cube3DTest

------------------------------------------------------
Release 0 | Beta 1 | Development 0 | Experimental 0

* Added Settings
* Added Window
* Added WindowTest
* Added GameLoopInterface
* Added GameLoop
* Added BaseGame
* Added BaseGameTest
* Added Log
* Added Logger
* Added Time
* Added FileUtils
* Added FileUtilsTest
* Added ThreadUtils
* Added ArrayUtils
* Added Timer
* Added TimerTest
* Added Console
* Added FPSCalculator
* Added Vector3D
* Added Object3D
* Added Renderer
* Added BufferUtils
* Added RenderableObject3D