@@ -1,4 +1,10 @@
 ------------------------------------------------------
+Release 0 | Beta 1 | Development 1 | Experimental 1
+
+* Added Shader
+* Added ShaderUtils
+
+------------------------------------------------------
 Release 0 | Beta 1 | Development 1 | Experimental 0
 
 * Added Face
